--- a/index.html
+++ b/index.html
@@ -491,6 +491,10 @@
                 box-shadow: none;
                 background-color: #f9f9f9;
             }
+            .unique
+            {
+                right: unset;
+            }
 /* 
             .dropdown-item {
                 padding-left: 40px;
