--- a/index.html
+++ b/index.html
@@ -760,8 +760,8 @@
                     <i class="fa-solid fa-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu unique" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="https://www.hellopeter.com/" target="_blank">Design Request Form</a></li>
-                    <li><a class="dropdown-item" href="https://www.hellopeter.com/" target="_blank">Developement Request Form</a></li>
+                    <li><a class="dropdown-item" href="https://forms.monday.com/forms/c6ace1373728c4f08289e891f4e16e34?r=use1" target="_blank">Design Request Form</a></li>
+                    <li><a class="dropdown-item" href="https://forms.monday.com/forms/a8c451d2e9c5cbcdacc97bf647e95c56?r=use1" target="_blank">Developement Request Form</a></li>
                 </ul>
             </div>
         </nav>
